Correct description of index selectivity recalculation

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1071,7 +1071,7 @@ SELECT * FROM employees WHERE (surname = ?)
 
 \anonsubsubsection{Пересчет селективности индексов}\label{sec:crind}
 
-Диалоговое окно \textit{Пересчет селективности} позволяет создавать новые индексы таблиц базы данных в выбранном соединении с базой данных.
+Диалоговое окно \textit{Пересчет селективности} позволяет обновлять статистику существующих индексов.
 
 \begin{enumerate}[leftmargin=26pt]
 	\item В дереве объектов панели \textit{Подключения} нажмите правой кнопкой мыши по узлу \textit{ИНДЕКСЫ} и выберите пункт \textit{Пересчитать статистику всех индексов}. Откроется диалоговое окно.
