Working at RS-20258. - Change labels of compared DBs comboBoxes

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -869,7 +869,6 @@ ColumnIndexTableModel.IndexName=Имя индекса
 ColumnIndexTableModel.IndexedColumn=Индексируемый столбец
 ColumnIndexTableModel.Non-Unique=Неуникальность
 ComparerDBPanel.ComparerDB=Сравнение баз данных
-ComparerDBPanel.WelcomeText=Мастер-база будет изменена.\nБаза сравнения - образец.
 ComparerDBPanel.CompareButton=Сравнить
 ComparerDBPanel.SaveScriptButton=Сохранить Скрипт
 ComparerDBPanel.ExecuteScriptButton=Выполнить Скрипт
@@ -885,8 +884,8 @@ ComparerDBPanel.IgnoreCK=Игнорировать CK
 ComparerDBPanel.IgnoreComments=Игнорировать комментарии
 ComparerDBPanel.IgnoreComputed=Игнорировать вычисляемые столбцы
 ComparerDBPanel.ConnectionsLabel=Соединения
-ComparerDBPanel.MasterDatabaseLabel=Мастер-база:
-ComparerDBPanel.CompareDatabaseLabel=База сравнения:
+ComparerDBPanel.MasterDatabaseLabel=Целевая база:
+ComparerDBPanel.CompareDatabaseLabel=База-образец:
 ComparerDBPanel.AttributesLabel=Аттрибуты
 ComparerDBPanel.PropertiesLabel=Параметры
 ComparerDBPanel.OutputLabel=Вывод
