work on the appearance of the database objects: 1. make all object creation dialogs look the same 2. make the object comment tab look the same 3. extend all creation panels from AbstractCreateObjectPanel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1006,12 +1006,13 @@ CreateTableFunctionPanel.Connection=Connection:
 CreateTableFunctionPanel.Constraints=Constraints
 CreateTableFunctionPanel.ExternalTableDataFileLabel=Data File:
 CreateTableFunctionPanel.FileDoesNotExistMessage=The selected file does not exist
-CreateTableFunctionPanel.IsAdapterNeededText=Use ADAPTER 'CSV'
-CreateTableFunctionPanel.IsExternalTableText=Create EXTERNAL table
+CreateTableFunctionPanel.IsAdapterNeededText=ADAPTER 'CSV'
+CreateTableFunctionPanel.IsExternalTableText=EXTERNAL
 CreateTableFunctionPanel.OpenFileDialogButton=Select
 CreateTableFunctionPanel.OpenFileDialogText=Select Data File
 CreateTableFunctionPanel.TableCommentLabel=Comment
 CreateTableFunctionPanel.TableName=Table Name:
+CreateTableFunctionPanel.Tablespace=Tablespace
 CreateTableFunctionPanel.TypeTemporaryTable=Type Temporary Table:
 CreateTableFunctionPanel.UseSQLSecurity=Use SQL Security?
 CreateTableFunctionPanel.data-types=data  types
@@ -1516,6 +1517,7 @@ QueryEditorPopupMenu.results.table.row.numbers=Show row number header
 QueryEditorPopupMenu.rollback=Rollback
 QueryEditorPopupMenu.use-single-resut-set-tab=Use single resut set tab
 QueryEditorResultsExporter.Custom=Custom:
+QueryEditorResultsExporter.CreateTable=Create Table
 QueryEditorResultsExporter.Delimiter=Delimiter:
 QueryEditorResultsExporter.ErrorWritingToFile=Error writing to file:\n\n
 QueryEditorResultsExporter.ExportQueryResults=Export Query Results
