add Jobs to objects tree

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -751,6 +751,7 @@ BrowserTreePopupMenu.SYSTEM_TRIGGER=system trigger
 BrowserTreePopupMenu.SYSTEM_VIEW=system view
 BrowserTreePopupMenu.TABLE=table
 BrowserTreePopupMenu.TABLESPACE=tablespace
+BrowserTreePopupMenu.JOB=job
 BrowserTreePopupMenu.TABLE_COLUMN=table column
 BrowserTreePopupMenu.TRIGGER=trigger for table
 BrowserTreePopupMenu.USER=user
@@ -1464,6 +1465,7 @@ NamedObject.SYSTEM_TRIGGER=System triggers
 NamedObject.SYSTEM_VIEW=System views
 NamedObject.TABLE=Tables
 NamedObject.TABLESPACE=Tablespaces
+NamedObject.JOB=Jobs
 NamedObject.TABLE_COLUMN=Table column
 NamedObject.TRIGGER=Triggers for Table
 NamedObject.UNIQUE_KEY=Unique keys
