--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -751,6 +751,7 @@ BrowserTreePopupMenu.SYSTEM_TRIGGER=системный триггер
 BrowserTreePopupMenu.SYSTEM_VIEW=системное представление
 BrowserTreePopupMenu.TABLE=таблицу
 BrowserTreePopupMenu.TABLESPACE=табличное пространство
+BrowserTreePopupMenu.JOB=задачу
 BrowserTreePopupMenu.TABLE_COLUMN=столбец
 BrowserTreePopupMenu.TRIGGER=триггер
 BrowserTreePopupMenu.USER=пользователя
@@ -1464,6 +1465,7 @@ NamedObject.SYSTEM_TRIGGER=Системные триггеры
 NamedObject.SYSTEM_VIEW=Системные представления
 NamedObject.TABLE=Таблицы
 NamedObject.TABLESPACE=Табличные пространства
+NamedObject.JOB=Задачи
 NamedObject.TABLE_COLUMN=Столбец таблицы
 NamedObject.TRIGGER=Триггеры
 NamedObject.UNIQUE_KEY=Уникальные ключи
