See RS-20258. - Add ability to perform DB comparing in the background

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -899,6 +899,8 @@ ComparerDBPanel.UnableCompareNoProperties=Unable to compare.\nNo properties for 
 ComparerDBPanel.NothingToSave=Nothing to save\nScript is empty.
 ComparerDBPanel.NothingToExecute=Nothing to execute\nScript is empty.
 ComparerDBPanel.Executing=Comparing, please wait
+ComparerDBPanel.Canceling=Canceling
+ComparerDBPanel.ComparingEnds=Comparing process has been ended
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
@@ -1078,6 +1080,9 @@ DatabaseTableNode.indexes=Indices
 DatabaseTableNode.primary-keys=Primary Keys
 DefaultConnectionListener.activeConns=Active Data Sources: {0}
 DefaultProgressDialog.Executing=Executing
+DefaultProgressDialog.CollapseButtonText=Collapse
+DefaultProgressDialog.CancelButtonToolTipText=Cancel process
+DefaultProgressDialog.CollapseButtonToolTipText=Collapse process to the background
 DefaultStatementExecutor.table.invalid-name=Invalid table name
 DependenciesPanel.dependedOn=Objects, that {0} depends on
 DependenciesPanel.dependent=Objects,that depend on {0}
