--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -899,6 +899,8 @@ ComparerDBPanel.UnableCompareNoProperties=Невозможно начать пр
 ComparerDBPanel.NothingToSave=Невозможно сохранить скрипт\nПоле скрипта пустое.
 ComparerDBPanel.NothingToExecute=Невозможно выполнить скрипт\nПоле скрипта пустое.
 ComparerDBPanel.Executing=Идет сравнение, пожалуйста подождите
+ComparerDBPanel.Canceling=Остановка процесса сравнения
+ComparerDBPanel.ComparingEnds=Процесс сравнения завершен
 ConnectionImporter.ImportingConnection=Импортирование соединения [ {0} ]
 ConnectionPanel.Advanced=Расширенные
 ConnectionPanel.Authentication=Аутентификация:
@@ -1078,6 +1080,9 @@ DatabaseTableNode.indexes=Индексы
 DatabaseTableNode.primary-keys=Первичные ключи
 DefaultConnectionListener.activeConns=Активные подключения: {0}
 DefaultProgressDialog.Executing=Выполнение
+DefaultProgressDialog.CollapseButtonText=Свернуть
+DefaultProgressDialog.CancelButtonToolTipText=Остановить выполнение процесса
+DefaultProgressDialog.CollapseButtonToolTipText=Свернуть выполнение процесса в фон
 DefaultStatementExecutor.table.invalid-name=Недопустимое имя таблицы
 DependenciesPanel.dependedOn=Объекты БД от которых зависит {0}
 DependenciesPanel.dependent=Объекты зависящие от {0}
