--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -900,7 +900,7 @@ ComparerDBPanel.NothingToSave=Nothing to save\nScript is empty.
 ComparerDBPanel.NothingToExecute=Nothing to execute\nScript is empty.
 ComparerDBPanel.Executing=Comparing, please wait
 ComparerDBPanel.Canceling=Canceling
-ComparerDBPanel.ComparingEnds=Comparing process has been ended
+ComparerDBPanel.ComparingEnds=Comparing has been finished
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
