See RS-85495 - Add simple panel with ability to start and end profiler session

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -234,6 +234,8 @@ action.toggle-autocommit-command=Toggle Auto-Commit
 action.toggle-editor-output-command=Show/Hide Editor Output
 action.trace-manager-command.description=Trace Manager
 action.trace-manager-command=Trace Manager
+action.profiler-command.description=Profiler
+action.profiler-command=Profiler
 action.undo-command.description=Undo the last action
 action.undo-command=Undo
 action.user-keywords-command=User Defined Keywords
@@ -1491,6 +1493,7 @@ PrintSelectDialog.Print_Preview=Print preview
 PrintSelectDialog.SQL_Query_Text_Area=SQL Query Text Area
 PrintSelectDialog.SQL_Table_Results_Panel=SQL Table Results Panel
 PrintSelectDialog.Select_the_print_area=Select the print area
+ProfilerPanel.title=Profiler
 PropertiesAppearance.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
 PropertyWrapperModel.property=Property
 PropertyWrapperModel.value=Value
