--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -234,6 +234,8 @@ action.toggle-autocommit-command=Переключение автофиксаци
 action.toggle-editor-output-command=Показать/Скрыть редактор вывода
 action.trace-manager-command.description=Модуль работы с аудитом сервера
 action.trace-manager-command=Трейс Менеджер
+action.profiler-command.description=Профайлер
+action.profiler-command=Профайлер
 action.undo-command.description=Отмена последнего действия
 action.undo-command=Отмена действия
 action.user-keywords-command=Пользовательские ключевые слова
@@ -1491,6 +1493,7 @@ PrintSelectDialog.Print_Preview=Предварительный просмотр
 PrintSelectDialog.SQL_Query_Text_Area=SQL-запрос текстовой области
 PrintSelectDialog.SQL_Table_Results_Panel=SQL таблица
 PrintSelectDialog.Select_the_print_area=Выберите область печати
+ProfilerPanel.title=Профайлер
 PropertiesAppearance.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
 PropertyWrapperModel.property=Свойство
 PropertyWrapperModel.value=Значение
