--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1494,6 +1494,23 @@ PrintSelectDialog.SQL_Query_Text_Area=SQL Query Text Area
 PrintSelectDialog.SQL_Table_Results_Panel=SQL Table Results Panel
 PrintSelectDialog.Select_the_print_area=Select the print area
 ProfilerPanel.title=Profiler
+ProfilerPanel.Start=Start
+ProfilerPanel.Pause=Pause
+ProfilerPanel.Resume=Resume
+ProfilerPanel.Stop=Stop
+ProfilerPanel.Cancel=Cancel
+ProfilerPanel.Discard=Discard
+ProfilerPanel.Connection=Connection:
+ProfilerPanel.FlashInterval=Flash interval:
+ProfilerPanel.ErrorBuildingTable=Error occurred when building resultSetTable
+ProfilerPanel.ErrorUpdatingData=Error updating profiler data
+ProfilerPanel.VersionNotSupported=Unable to start profiler session\nDB version below 5.0
+ProfilerPanel.ErrorSessionStart=Unable to start profiler session
+ProfilerPanel.ErrorSessionPause=Unable to pause profiler session
+ProfilerPanel.ErrorSessionResume=Unable to resume profiler session
+ProfilerPanel.ErrorSessionStop=Unable to stop profiler session
+ProfilerPanel.ErrorSessionCancel=Unable to cancel profiler session
+ProfilerPanel.ErrorSessionDiscard=Unable to discard profiler session
 PropertiesAppearance.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
 PropertyWrapperModel.property=Property
 PropertyWrapperModel.value=Value
