--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1494,6 +1494,23 @@ PrintSelectDialog.SQL_Query_Text_Area=SQL-запрос текстовой обл
 PrintSelectDialog.SQL_Table_Results_Panel=SQL таблица
 PrintSelectDialog.Select_the_print_area=Выберите область печати
 ProfilerPanel.title=Профайлер
+ProfilerPanel.Start=Старт
+ProfilerPanel.Pause=Пауза
+ProfilerPanel.Resume=Возобновить
+ProfilerPanel.Stop=Стоп
+ProfilerPanel.Cancel=Отменить
+ProfilerPanel.Discard=Очистить
+ProfilerPanel.Connection=Соединение:
+ProfilerPanel.FlashInterval=Интервал обновления:
+ProfilerPanel.ErrorBuildingTable=Возникла ошибка при создании таблицы данных профайлера
+ProfilerPanel.ErrorUpdatingData=Возникла ошибка при обновлении данных профайлера
+ProfilerPanel.VersionNotSupported=Невозможно запустить сессию профайлера\nВерсия БД ниже 5.0
+ProfilerPanel.ErrorSessionStart=Невозможно запустить сессию профайлера
+ProfilerPanel.ErrorSessionPause=Невозможно приостановить сессию профайлера
+ProfilerPanel.ErrorSessionResume=Невозможно возобновить сессию профайлера
+ProfilerPanel.ErrorSessionStop=Невозможно остановить сессию профайлера
+ProfilerPanel.ErrorSessionCancel=Невозможно отменить сессию профайлера
+ProfilerPanel.ErrorSessionDiscard=Невозможно очистить сессии профайлера
 PropertiesAppearance.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
 PropertyWrapperModel.property=Свойство
 PropertyWrapperModel.value=Значение
