Add schedule support to the gui

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -988,6 +988,12 @@ CreateIndexPanel.fields=Fields
 CreateIndexPanel.sorting=Sorting
 CreateIndexPanel.tablespace=Tablespace
 CreateIndexPanel.unique=Unique
+CreateJobPanel.Database=Database
+CreateJobPanel.ID=ID
+CreateJobPanel.Schedule=Schedule
+CreateJobPanel.endDate=End date
+CreateJobPanel.jobType=Job type
+CreateJobPanel.startDate=Start date
 CreatePackagePanel.Body=Body
 CreatePackagePanel.Description=Comment
 CreatePackagePanel.Header=Header
@@ -1043,6 +1049,38 @@ CreateUDFPanel.ModuleName=Module Name
 CreateUDFPanel.Parameter=Parameter
 CreateUDFPanel.Position=Position
 CreateUDFPanel.ReturnsType=Returns Type
+CronTab.and=and
+CronTab.begin_with=starting
+CronTab.day/s=day(s)
+CronTab.day=day
+CronTab.days=days
+CronTab.each_between_day=Every day between
+CronTab.each_between_hour=Every hour between
+CronTab.each_between_minute=Every minute between
+CronTab.each_between_month=Every month between
+CronTab.each_between_weekday=Every weekday between
+CronTab.each_day=Every day
+CronTab.each_hour=Every hour
+CronTab.each_minute=Every minute
+CronTab.each_month=Every month
+CronTab.each_unit=Every {0}
+CronTab.each_weekday=Every weekday
+CronTab.end_with=ending
+CronTab.hour/s=hour(s)
+CronTab.hour=hour
+CronTab.hours=hours
+CronTab.interval=Every
+CronTab.minute/s=minute(s)
+CronTab.minute=minute
+CronTab.minutes=minutes
+CronTab.month/s=month(s)
+CronTab.month=month
+CronTab.months=months
+CronTab.specific=Specific {0} (choose one or many)
+CronTab.use_textField=Manual input in the text field
+CronTab.weekday/s=weekday(s)
+CronTab.weekday=weekday
+CronTab.weekdays=weekdays
 DatabaseObjectMetaDataPanel.DatabaseObjectMetaData=Database Object Meta Data
 DatabaseTableNode.columns=Columns
 DatabaseTableNode.foreign-keys=Foreign Keys
