--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -988,6 +988,12 @@ CreateIndexPanel.fields=Поля
 CreateIndexPanel.sorting=Сортировка
 CreateIndexPanel.tablespace=Табличное пространство
 CreateIndexPanel.unique=Уникальный
+CreateJobPanel.Database=База данных
+CreateJobPanel.ID=ID
+CreateJobPanel.Schedule=Расписание
+CreateJobPanel.endDate=Время завершения
+CreateJobPanel.jobType=Тип задачи
+CreateJobPanel.startDate=Время запуска
 CreatePackagePanel.Body=Тело
 CreatePackagePanel.Description=Комментарий
 CreatePackagePanel.Header=Заголовок
@@ -1043,6 +1049,38 @@ CreateUDFPanel.ModuleName=Название модуля
 CreateUDFPanel.Parameter=Параметр
 CreateUDFPanel.Position=Позиция
 CreateUDFPanel.ReturnsType=Возвращаемый тип
+CronTab.and=и
+CronTab.begin_with=Начиная с
+CronTab.day/s=день/дня/дней
+CronTab.day=день
+CronTab.days=дни
+CronTab.each_between_day=Каждый день между
+CronTab.each_between_hour=Каждый час между
+CronTab.each_between_minute=Каждую минуту между
+CronTab.each_between_month=Каждый месяц между
+CronTab.each_between_weekday=Каждый день недели между
+CronTab.each_day=Каждый день
+CronTab.each_hour=Каждый час
+CronTab.each_minute=Каждую минуту
+CronTab.each_month=Каждый месяц
+CronTab.each_unit=Кажд(ый/ую) {0}
+CronTab.each_weekday=Каждый день
+CronTab.end_with=Заканчивая
+CronTab.hour/s=час(а/ов)
+CronTab.hour=час
+CronTab.hours=часы
+CronTab.interval=Каждые
+CronTab.minute/s=минут(у/ы)
+CronTab.minute=минуту
+CronTab.minutes=минуты
+CronTab.month/s=месяц(а/ев)
+CronTab.month=месяц
+CronTab.months=месяцы
+CronTab.specific=Определенные {0} (выберите один или несколько)
+CronTab.use_textField=Ручной ввод в текстовое поле
+CronTab.weekday/s=день/дня/дней
+CronTab.weekday=день
+CronTab.weekdays=дни недели
 DatabaseObjectMetaDataPanel.DatabaseObjectMetaData=Метаданные объекта базы данных
 DatabaseTableNode.columns=Столбцы
 DatabaseTableNode.foreign-keys=Внешние ключи
