Work at RS-85459 - Add parameter panel for selecting fields that will be displayed

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1502,8 +1502,11 @@ ProfilerPanel.Cancel=Отменить
 ProfilerPanel.Discard=Очистить
 ProfilerPanel.Connection=Соединение:
 ProfilerPanel.FlashInterval=Интервал обновления:
+ProfilerPanel.Properties=Параметры
+ProfilerPanel.Fields=Отображаемые поля
 ProfilerPanel.ErrorBuildingTable=Возникла ошибка при создании таблицы данных профайлера
 ProfilerPanel.ErrorUpdatingData=Возникла ошибка при обновлении данных профайлера
+ProfilerPanel.ErrorNoFieldsForDisplay=Не выбрано ни одного поля для отображения.\nВсе равно запустить сессию профайлера?
 ProfilerPanel.VersionNotSupported=Невозможно запустить сессию профайлера\nВерсия БД ниже 5.0
 ProfilerPanel.ErrorSessionStart=Невозможно запустить сессию профайлера
 ProfilerPanel.ErrorSessionPause=Невозможно приостановить сессию профайлера
