Add amount of objects that will be created, dropped and altered to comparer ends message

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -900,7 +900,7 @@ ComparerDBPanel.NothingToSave=Nothing to save\nScript is empty.
 ComparerDBPanel.NothingToExecute=Nothing to execute\nScript is empty.
 ComparerDBPanel.Executing=Comparing, please wait
 ComparerDBPanel.Canceling=Canceling
-ComparerDBPanel.ComparingEnds=Comparing has been finished
+ComparerDBPanel.ComparingEnds=Comparing has been finished.\nObjects to create - %d\nObjects to drop - %d\nObjects to alter - %d
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
