--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -900,7 +900,7 @@ ComparerDBPanel.NothingToSave=Невозможно сохранить скрип
 ComparerDBPanel.NothingToExecute=Невозможно выполнить скрипт\nПоле скрипта пустое.
 ComparerDBPanel.Executing=Идет сравнение, пожалуйста подождите
 ComparerDBPanel.Canceling=Остановка процесса сравнения
-ComparerDBPanel.ComparingEnds=Процесс сравнения завершен
+ComparerDBPanel.ComparingEnds=Процесс сравнения завершен.\nБудет создано - %d\nБудет удалено - %d\nБудет изменено - %d
 ConnectionImporter.ImportingConnection=Импортирование соединения [ {0} ]
 ConnectionPanel.Advanced=Расширенные
 ConnectionPanel.Authentication=Аутентификация:
