Fix bug when the user could start comparing inactive connections

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -894,6 +894,7 @@ ComparerDBPanel.RDBVersionBelow4=\nAt least one of the connection use RDB versio
 ComparerDBPanel.ScriptSaved=Script was saved successfully.
 ComparerDBPanel.SavedTo=Saved to: 
 ComparerDBPanel.UnableCompareSampleConnections=Unable to compare.\nThe same connections selected.
+ComparerDBPanel.UnableCompareNoConnections=Unable to compare.\nAt least one of the connections is inactive.
 ComparerDBPanel.UnableCompareNoAttributes=Unable to compare.\nNo attributes for comparing selected.
 ComparerDBPanel.UnableCompareNoProperties=Unable to compare.\nNo properties for comparing selected.
 ComparerDBPanel.NothingToSave=Nothing to save\nScript is empty.
