Add button "Execute in the profiler" to "Query Editor" panel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1611,6 +1611,7 @@ QueryEditorToolBar.editor-stop-command=Cancel Current Statement
 QueryEditorToolBar.execute-at-cursor-command=Execute query at cursor
 QueryEditorToolBar.execute-command=Execute the contents of the query editor
 QueryEditorToolBar.execute-script-command=Execute SQL Script
+QueryEditorToolBar.execute-in-profiler-command=Execute SQL query in the profiler
 QueryEditorToolBar.execute-selection-command=Execute the current text selection
 QueryEditorToolBar.manage-shortcuts-command=SQL shortcuts
 QueryEditorToolBar.print-explained-plan-command=Print explained plan for query
