fix the scheduler bugs

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1023,6 +1023,7 @@ CreateIndexPanel.tablespace=Tablespace
 CreateIndexPanel.unique=Unique
 CreateJobPanel.Database=Database
 CreateJobPanel.ID=ID
+CreateJobPanel.Log=Log
 CreateJobPanel.Schedule=Schedule
 CreateJobPanel.endDate=End date
 CreateJobPanel.jobType=Job type
@@ -1462,6 +1463,8 @@ InsertColumnPanel.PrimaryKey=Primary Key
 InsertColumnPanel.SQL=SQL
 InsertColumnPanel.Table=Table:
 InsertColumnPanel.Type=Type
+JobsLogPanel.endDate=End timestamp
+JobsLogPanel.startDate=Start timestamp
 LicenseCommand.license=License
 ListSelectionPanel.AvailableColumns=Available Columns:
 ListSelectionPanel.Move=Move
