--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1023,6 +1023,7 @@ CreateIndexPanel.tablespace=Табличное пространство
 CreateIndexPanel.unique=Уникальный
 CreateJobPanel.Database=База данных
 CreateJobPanel.ID=ID
+CreateJobPanel.Log=Журнал
 CreateJobPanel.Schedule=Расписание
 CreateJobPanel.endDate=Время завершения
 CreateJobPanel.jobType=Тип задачи
@@ -1462,6 +1463,8 @@ InsertColumnPanel.PrimaryKey=Первичный ключ
 InsertColumnPanel.SQL=SQL
 InsertColumnPanel.Table=Таблица:
 InsertColumnPanel.Type=Тип
+JobsLogPanel.endDate=Конец периода
+JobsLogPanel.startDate=Начало периода
 LicenseCommand.license=Лицензия
 ListSelectionPanel.AvailableColumns=Доступные столбцы:
 ListSelectionPanel.Move=Переместить
