--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1537,6 +1537,7 @@ ProfilerPanel.Stop=Стоп
 ProfilerPanel.Cancel=Отменить
 ProfilerPanel.Discard=Очистить
 ProfilerPanel.Connection=Соединение:
+ProfilerPanel.showProfilerProcessesCheckBox=Отображать процессы профайлера
 ProfilerPanel.ErrorUpdatingData=Возникла ошибка при обновлении данных профайлера
 ProfilerPanel.VersionNotSupported=Невозможно запустить сессию профайлера\nВерсия БД ниже 5.0
 ProfilerPanel.ErrorSessionStart=Невозможно запустить сессию профайлера
