Add support of JOB for DB Comparer

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -890,8 +890,8 @@ ComparerDBPanel.CompareDatabaseLabel=Source database:
 ComparerDBPanel.AttributesLabel=Attributes
 ComparerDBPanel.PropertiesLabel=Properties
 ComparerDBPanel.OutputLabel=Output
-ComparerDBPanel.RDBVersionBelow3=\nAt least one of the connection use RDB version below 3.0.\nUser, Package, Function, Triggers for DDLs & Tablespace will not be included in the comparison.
-ComparerDBPanel.RDBVersionBelow4=\nAt least one of the connection use RDB version below 4.0.\nTablespace will not be included in the comparison.
+ComparerDBPanel.RDBVersionBelow3=\nAt least one of the connection use RDB version below 3.0.\nUser, Package, Function, Triggers for DDLs, Tablespace & Job will not be included in the comparison.
+ComparerDBPanel.RDBVersionBelow4=\nAt least one of the connection use RDB version below 4.0.\nTablespace & Job will not be included in the comparison.
 ComparerDBPanel.ScriptSaved=Script was saved successfully.
 ComparerDBPanel.SavedTo=Saved to: 
 ComparerDBPanel.UnableCompareSampleConnections=Unable to compare.\nThe same connections selected.
