--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -890,8 +890,8 @@ ComparerDBPanel.CompareDatabaseLabel=База-образец:
 ComparerDBPanel.AttributesLabel=Аттрибуты
 ComparerDBPanel.PropertiesLabel=Параметры
 ComparerDBPanel.OutputLabel=Вывод
-ComparerDBPanel.RDBVersionBelow3=\nКак минимум одно из соединений использует версию РедБазыДанных ниже 3.0.\nПользователи, пакеты, функции, DDL триггеры и табличные пространства не будут включены в процесс сравнения.
-ComparerDBPanel.RDBVersionBelow4=\nКак минимум одно из соединений использует версию РедБазыДанных ниже 4.0.\nТабличные пространства не будут включены в процесс сравнения.
+ComparerDBPanel.RDBVersionBelow3=\nКак минимум одно из соединений использует версию РедБазыДанных ниже 3.0.\nПользователи, пакеты, функции, DDL триггеры, табличные пространства и задачи не будут включены в процесс сравнения.
+ComparerDBPanel.RDBVersionBelow4=\nКак минимум одно из соединений использует версию РедБазыДанных ниже 4.0.\nТабличные пространства и задачи не будут включены в процесс сравнения.
 ComparerDBPanel.ScriptSaved=Скрипт сохранен успешно.
 ComparerDBPanel.SavedTo=Путь к сохраненному файлу: 
 ComparerDBPanel.UnableCompareSampleConnections=Невозможно начать процесс сравнения.\nВыбраны эквивалентные соединения.
