add scheduler like windows

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -6,6 +6,7 @@ common.ComputedSource=Computed Source
 common.FormatSQL=Format SQL
 common.SQL=SQL
 common.add.button=Add
+common.advanced=Advanced
 common.apply.button=Apply
 common.cancel.button=Cancel
 common.clear.button=Clear
@@ -1851,6 +1852,23 @@ WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.properties=properties
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
+WindowsSchedulerPanel.Day/s=Day(s)
+WindowsSchedulerPanel.Day=day
+WindowsSchedulerPanel.Days=Days
+WindowsSchedulerPanel.Every=Every
+WindowsSchedulerPanel.EveryUnit=Every {0}
+WindowsSchedulerPanel.Hour=hour
+WindowsSchedulerPanel.Minute=minute
+WindowsSchedulerPanel.Month=month
+WindowsSchedulerPanel.Months=Months
+WindowsSchedulerPanel.Week/s=Week(s)
+WindowsSchedulerPanel.Week=week
+WindowsSchedulerPanel.Weeks=Weeks
+WindowsSchedulerPanel.day={0} day
+WindowsSchedulerPanel.h={0} h
+WindowsSchedulerPanel.min={0} min
+WindowsSchedulerPanel.once=Once a year
+WindowsSchedulerPanel.repeat=To repeat job every
 WizardProcessPanel.Back=Back
 WizardProcessPanel.Cancel=Cancel
 WizardProcessPanel.Help=Help
