--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -6,6 +6,7 @@ common.ComputedSource=Вычисляется как
 common.FormatSQL=Форматировать SQL
 common.SQL=SQL
 common.add.button=Добавить
+common.advanced=Расширенные свойства
 common.apply.button=Применить
 common.cancel.button=Отмена
 common.clear.button=Очистить
@@ -1851,6 +1852,23 @@ WindowAddUser.error.pwds-not-match=Пароли не совпадают
 WindowAddUser.properties=Свойства
 WindowAddUser.tag=Метка
 WindowAddUser.value=Значение
+WindowsSchedulerPanel.Day/s=День/Дня/Дней
+WindowsSchedulerPanel.Day=день
+WindowsSchedulerPanel.Days=Дни
+WindowsSchedulerPanel.Every=Каждые
+WindowsSchedulerPanel.EveryUnit=Кажд(ый/ую) {0}
+WindowsSchedulerPanel.Hour=час
+WindowsSchedulerPanel.Minute=минуту
+WindowsSchedulerPanel.Month=месяц
+WindowsSchedulerPanel.Months=Месяцы
+WindowsSchedulerPanel.Week/s=Неделю/Недели/Недель
+WindowsSchedulerPanel.Week=неделю
+WindowsSchedulerPanel.Weeks=Недели
+WindowsSchedulerPanel.day={0} д
+WindowsSchedulerPanel.h={0} ч
+WindowsSchedulerPanel.min={0} мин
+WindowsSchedulerPanel.once=Раз в год
+WindowsSchedulerPanel.repeat=Повторять задачу каждые
 WizardProcessPanel.Back=Назад
 WizardProcessPanel.Cancel=Отменить
 WizardProcessPanel.Help=Помощь
