Change "Execute" button behavior (see RS-94739). Now when you click on the "Execute" button in "Query Editor", the script is executed as a whole block and isn't divided into several in accordance with the delimiters. To execute a SQL script from several queries, you need to use the "Execute SQL script" button.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1635,7 +1635,7 @@ QueryEditorToolBar.editor-rs-metadata-command=Display this result set's meta dat
 QueryEditorToolBar.editor-show-hide-rs-columns-command=Show/hide result set columns
 QueryEditorToolBar.editor-stop-command=Cancel Current Statement
 QueryEditorToolBar.execute-at-cursor-command=Execute query at cursor
-QueryEditorToolBar.execute-command=Execute the contents of the query editor
+QueryEditorToolBar.execute-command=Execute query as a whole block
 QueryEditorToolBar.execute-script-command=Execute SQL Script
 QueryEditorToolBar.execute-selection-command=Execute the current text selection
 QueryEditorToolBar.manage-shortcuts-command=SQL shortcuts
