Update tooltip text for QueryEditorToolBar's buttons (see RS-92519)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1625,27 +1625,27 @@ QueryEditorToolBar.change-split-orientation-command=Change Split Orientation
 QueryEditorToolBar.clear-editor-output-command=Clear the editor's output log panel
 QueryEditorToolBar.comment-lines-command=Comment/Uncomment
 QueryEditorToolBar.commit-command=Commit all changes since last commit/rollback
-QueryEditorToolBar.editor-conn-change-command=Closes the editor's connection and retrieves another from the pool
+QueryEditorToolBar.editor-conn-change-command=Close the editor's connection and reopen it
 QueryEditorToolBar.editor-export-command=Export the selected result set to file
-QueryEditorToolBar.editor-format-sql-command=Format SQL
-QueryEditorToolBar.editor-next-command=Next Statement
-QueryEditorToolBar.editor-previous-command=Previous Statement
-QueryEditorToolBar.editor-refresh-autocomplete-command=Refresh editor's schema autocomplete list
+QueryEditorToolBar.editor-format-sql-command=Format SQL Code
+QueryEditorToolBar.editor-next-command=Next Completed Statement
+QueryEditorToolBar.editor-previous-command=Previous Completed Statement
+QueryEditorToolBar.editor-refresh-autocomplete-command=Update Keyword List
 QueryEditorToolBar.editor-rs-metadata-command=Display this result set's meta data
-QueryEditorToolBar.editor-show-hide-rs-columns-command=Show/hide result set columns
-QueryEditorToolBar.editor-stop-command=Cancel Current Statement
-QueryEditorToolBar.execute-at-cursor-command=Execute query at cursor
+QueryEditorToolBar.editor-show-hide-rs-columns-command=Select dataset columns to display
+QueryEditorToolBar.editor-stop-command=Cancel current statement execution
+QueryEditorToolBar.execute-at-cursor-command=Execute statement the cursor is on
 QueryEditorToolBar.execute-command=Execute query as a whole block
 QueryEditorToolBar.execute-script-command=Execute SQL Script
-QueryEditorToolBar.execute-selection-command=Execute the current text selection
-QueryEditorToolBar.manage-shortcuts-command=SQL shortcuts
+QueryEditorToolBar.execute-selection-command=Execute the current SQL script selection
+QueryEditorToolBar.manage-shortcuts-command=Display SQL shortcuts
 QueryEditorToolBar.print-explained-plan-command=Print explained plan for query
 QueryEditorToolBar.print-plan-command=Print plan for query
 QueryEditorToolBar.query-bookmarks=Query Bookmarks
 QueryEditorToolBar.rollback-command=Rollback all changes since last commit/rollback
 QueryEditorToolBar.shift-text-left-command=Shift line/selection left
 QueryEditorToolBar.shift-text-right-command=Shift line/selection right
-QueryEditorToolBar.sql-history-command=SQL command history
+QueryEditorToolBar.sql-history-command=Show history of executed queries
 QueryEditorToolBar.toggle-autocommit-command=Toggle auto-commit on/off
 QueryEditorToolBar.toggle-editor-output-command=Show/hide the output pane
 ReddatabaseAPI.Authorization=Authorization
