--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -904,6 +904,7 @@ ComparerDBPanel.NothingToExecute=Nothing to execute\nScript is empty.
 ComparerDBPanel.Executing=Comparing, please wait
 ComparerDBPanel.Canceling=Canceling
 ComparerDBPanel.ComparingEnds=Comparing has been finished.\nObjects to create - %d\nObjects to drop - %d\nObjects to alter - %d
+ComparerDBPanel.ErrorOccurred=Error occurred while comparing DBs.\nThe comparison will be finished forcibly.
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
