Fix buttons tooltips

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -858,6 +858,11 @@ CheckForUpdateNotifier.restart.message=The update has been downloaded. Do you wa
 CheckForUpdateNotifier.title=RedExpert Update
 CheckForUpdateNotifier.updateAvailable=Update available
 ClearRecentFilesCommand.message=An IO error occurred clearing the recent open files list
+CreateTableToolBar.InsertAfter=Insert a row after the current selection
+CreateTableToolBar.InsertBefore=Insert a row before the current selection
+CreateTableToolBar.DeleteSelection=Delete selected row
+CreateTableToolBar.MoveUp=Move selected row up
+CreateTableToolBar.MoveDown=Move selected row down
 ColumnConstraintTableModel.Check=Check
 ColumnConstraintTableModel.DeleteRule=Delete Rule
 ColumnConstraintTableModel.Name=Name
