--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -858,6 +858,11 @@ CheckForUpdateNotifier.restart.message=Обновление загружено. 
 CheckForUpdateNotifier.title=Обновление Ред Эксперта
 CheckForUpdateNotifier.updateAvailable=Доступно обновление
 ClearRecentFilesCommand.message=Произошла ошибка ввода-вывода при очистке списка последних открытых файлов
+CreateTableToolBar.InsertAfter=Добавить строку после выбранной
+CreateTableToolBar.InsertBefore=Добавить строку перед выбранной
+CreateTableToolBar.DeleteSelection=Удалить выбранную строку
+CreateTableToolBar.MoveUp=Переместить выбранную строку выше
+CreateTableToolBar.MoveDown=Переместить выбранную строку ниже
 ColumnConstraintTableModel.Check=Проверка
 ColumnConstraintTableModel.DeleteRule=Правило удаления
 ColumnConstraintTableModel.Name=Название
