--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1582,7 +1582,7 @@ ProfilerPanel.Stop=Stop
 ProfilerPanel.Cancel=Cancel
 ProfilerPanel.Discard=Discard
 ProfilerPanel.Connection=Connection:
-ProfilerPanel.showProfilerProcessesCheckBox=Show Profiler Processes
+ProfilerPanel.compactViewCheckBox=Compact view
 ProfilerPanel.ErrorUpdatingData=Error updating profiler data
 ProfilerPanel.VersionNotSupported=Unable to start profiler session\nDB version below 5.0
 ProfilerPanel.ErrorSessionStart=Unable to start profiler session
