Make progressBar in DB comparer more informative

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -910,6 +910,20 @@ ComparerDBPanel.Executing=Comparing, please wait
 ComparerDBPanel.Canceling=Canceling
 ComparerDBPanel.ComparingEnds=Comparing has been finished.\nObjects to create - %d\nObjects to drop - %d\nObjects to alter - %d
 ComparerDBPanel.ErrorOccurred=Error occurred while comparing DBs.\nThe comparison will be finished forcibly.
+ComparerDBPanel.ProgressBarFinish=Comparing ends
+ComparerDBPanel.GenerateCreateScript=Generating SQL script for %s to create
+ComparerDBPanel.GenerateDropScript=Generating SQL script for %s to drop
+ComparerDBPanel.GenerateAlterScript=Generating SQL script for %s to alter
+ComparerDBPanel.GenerateCreateConstraintScript=Generating SQL script for constraints to create
+ComparerDBPanel.GenerateDropConstraintScript=Generating SQL script for constraints to drop
+ComparerDBPanel.GenerateCreateComputedScript=Generating SQL script for computed fields to create
+ComparerDBPanel.ExtractingForCreate=Extracting %s for create
+ComparerDBPanel.ExtractingForDrop=Extracting %s for drop
+ComparerDBPanel.ExtractingForAlter=Extracting %s for alter
+ComparerDBPanel.ExtractingConstraintsForDrop=Extracting constraints to drop
+ComparerDBPanel.ExtractingConstraintsForAlter=Extracting constraints to alter
+ComparerDBPanel.SearchingForDependencies=Searching for dependencies
+ComparerDBPanel.CreatingStubs=Creating stubs for %s
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
