--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -910,6 +910,20 @@ ComparerDBPanel.Executing=Идет сравнение, пожалуйста по
 ComparerDBPanel.Canceling=Остановка процесса сравнения
 ComparerDBPanel.ComparingEnds=Процесс сравнения завершен.\nБудет создано - %d\nБудет удалено - %d\nБудет изменено - %d
 ComparerDBPanel.ErrorOccurred=Произошла ошибка при сравнении БД.\nСравнение будет принудительно завершено.
+ComparerDBPanel.ProgressBarFinish=Процесс сравнения завершен
+ComparerDBPanel.GenerateCreateScript=Генерация SQL скрипта для создания %s
+ComparerDBPanel.GenerateDropScript=Генерация SQL скрипта для удаления %s
+ComparerDBPanel.GenerateAlterScript=Генерация SQL скрипта для изменения %s
+ComparerDBPanel.GenerateCreateConstraintScript=Генерация SQL скрипта для создания ограничений
+ComparerDBPanel.GenerateDropConstraintScript=Генерация SQL скрипта для удаления ограничений
+ComparerDBPanel.GenerateCreateComputedScript=Генерация SQL скрипта для создания вычисляемых полей
+ComparerDBPanel.ExtractingForCreate=Извлечение %s для создания
+ComparerDBPanel.ExtractingForDrop=Извлечение %s для удаления
+ComparerDBPanel.ExtractingForAlter=Извлечение %s для изменения
+ComparerDBPanel.ExtractingConstraintsForDrop=Извлечение ограничений для удаления
+ComparerDBPanel.ExtractingConstraintsForAlter=Извлечение ограничений для изменения
+ComparerDBPanel.SearchingForDependencies=Поиск зависимостей
+ComparerDBPanel.CreatingStubs=Создание скриптов-заглушек для %s
 ConnectionImporter.ImportingConnection=Импортирование соединения [ {0} ]
 ConnectionPanel.Advanced=Расширенные
 ConnectionPanel.Authentication=Аутентификация:
