Fix progressBar hovering feeling

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -924,6 +924,8 @@ ComparerDBPanel.ExtractingConstraintsForDrop=Извлечение огранич
 ComparerDBPanel.ExtractingConstraintsForAlter=Извлечение ограничений для изменения
 ComparerDBPanel.SearchingForDependencies=Поиск зависимостей
 ComparerDBPanel.CreatingStubs=Создание скриптов-заглушек для %s
+ComparerDBPanel.LoadingFullInfo=Загрузка полной информации для %s
+ComparerDBPanel.LoadColumnsForAllTables=Загрузка столбцов для %s
 ConnectionImporter.ImportingConnection=Импортирование соединения [ {0} ]
 ConnectionPanel.Advanced=Расширенные
 ConnectionPanel.Authentication=Аутентификация:
