--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -924,6 +924,8 @@ ComparerDBPanel.ExtractingConstraintsForDrop=Extracting constraints to drop
 ComparerDBPanel.ExtractingConstraintsForAlter=Extracting constraints to alter
 ComparerDBPanel.SearchingForDependencies=Searching for dependencies
 ComparerDBPanel.CreatingStubs=Creating stubs for %s
+ComparerDBPanel.LoadingFullInfo=Loading full info for %s
+ComparerDBPanel.LoadColumnsForAllTables=Loading columns for %s
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
