Fix comparer progressBar displaying from DefaultDatabaseMetaTag class. Fix russian labels for comparer progressbar.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -924,7 +924,7 @@ ComparerDBPanel.ExtractingConstraintsForDrop=Extracting constraints to drop
 ComparerDBPanel.ExtractingConstraintsForAlter=Extracting constraints to alter
 ComparerDBPanel.SearchingForDependencies=Searching for dependencies
 ComparerDBPanel.CreatingStubs=Creating stubs for %s
-ComparerDBPanel.LoadingFullInfo=Loading full info for %s
+ComparerDBPanel.LoadFullInfoForObjects=Loading full info for %s
 ComparerDBPanel.LoadColumnsForAllTables=Loading columns for %s
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
